syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

package storage;

message SignatureIntegration {
    string id   = 1;  // @gotags: sql:"pk"
    string name = 2;  // @gotags: sql:"unique"

    CosignPublicKeyVerification cosign = 3;
}

message CosignPublicKeyVerification {
    message PublicKey {
        string name               = 1;
        string public_key_pem_enc = 2;
    }
    repeated PublicKey public_keys = 3;
}
